Task-7294: Clean old wiki code
* Task-7294: Clean old wiki code